[metadata]
name = edgar
version = attr: edgar.__version__
description = An OpenSSH config file compiler
keywords = SSH, config
license = WTFPL
license_file = LICENSE
author = Étienne Deparis
author_email = etienne@depar.is
url = https://git.deparis.io/edgar
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: What The F*** Public License (WTFPL)
    Programming Language :: Python :: 3

[options]
zip_safe = True
install_requires = pyyaml
packages = edgar

[options.entry_points]
console_scripts =
    edgar = edgar.cli:run_edgar
