[metadata]
name = edgar
version = attr: edgar.__version__
description = attr: edgar.__description__
keywords = SSH, config
license = WTFPL
license_file = LICENSE
author = Étienne Deparis
author_email = etienne@depar.is
url = https://git.deparis.io/edgar
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: What The F*** Public License (WTFPL)
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires = pyyaml

[options.entry_points]
console_scripts =
    edgar = edgar.cli:run_edgar

[options.package_data]
* = LICENSE, *.org

[options.packages.find]
exclude = tests
